# Linear-models

./: .gitmodules  CMakeLists.txt  MLR.sh  README.md  RowTransform.cpp  RowTransform.h  compile.sh  main.cpp  matrix.cpp  matrix.h  matrixui.cpp  matrixui.h  my_program
LogisticRegression/: Data_Preprocessing.cpp  LRmain.cpp  LogisticRegression.cpp
MultipleLinearRegression/: Data_Preprocessing.cpp  MultipleLinearRegression.cpp
